# carla_AD_algorithm

./: .gitignore  LICENSE  README.md  analyze_log.py  auto_analyze.py  build_output.txt  carla_ad_agent_ego_vehicle.yaml  check_spawn.py  check_vehicles.py  debug_compat.py  debug_sub.py  diagnose_ad_agent.py  find_log.py  plot_results.py  test_road_width.py  update_logs.py
CILQR/include/: cilqr copy.h  cilqr_solver.hpp  cilqrbak.h
CILQR/src/: cilqr copy.cpp  cilqr_solver.cpp
src/CILQR/src/: cilqr_solver.cpp  cilqrbak.cpp  motion_planning.cpp
src/my_algorithm/BehaviorPlanners/eudm_planner/: CMakeLists.txt  package.xml
src/my_algorithm/Controllers/cilqr_controller/: CMakeLists.txt  package.xml
src/my_algorithm/Controllers/cilqr_controller/include/cilqr_controller/: cilqr_controller.h  cost_define.h
src/my_algorithm/Controllers/cilqr_controller/src/: cilqr_controller.cpp  cost_define.cpp
src/my_algorithm/Controllers/mpc/: CMakeLists.txt  package.xml
src/my_algorithm/Controllers/mpc/include/mpc/: mpc_controller.h
src/my_algorithm/Controllers/mpc/src/: mpc_controller.cpp
src/my_algorithm/Controllers/pidlqr/: CMakeLists.txt  package.xml
src/my_algorithm/Controllers/pidlqr/include/pidlqr/: lon_cascade_pid_controller.h  pid_lqr_controller.h
src/my_algorithm/Controllers/pidlqr/src/: Vehicle_model.cpp  lateral_lqr_controller.cpp  lon_cascade_pid_controller.cpp  pid_controller.cpp  pid_lqr_controller.cpp
src/my_algorithm/Controllers/pidlqr/test/: main.cpp
src/my_algorithm/LocalPlanners/cilqr_planner/: CMakeLists.txt  package.xml
src/my_algorithm/LocalPlanners/cilqr_planner/include/cilqr_planner/: cost_define.h  cost_factory.h  planner_cost.h  planner_weight.h
src/my_algorithm/LocalPlanners/lattice/: CMakeLists.txt  package.xml
src/my_algorithm/LocalPlanners/lattice/include/lattice/: lattice_collision_detection.h  trajectory1d_generator.h  trajectory_evaluator.h
src/my_algorithm/LocalPlanners/lattice/src/: lattice_collision_detection.cpp  lattice_planner.cpp  trajectory1d_generator.cpp  trajectory_evaluator.cpp
src/my_algorithm/LocalPlanners/lattice/test/: test_lattice_planner_main.cpp  trajectory1d_generator_main.cpp
src/my_algorithm/Planners/emplanner/: CMakeLists.txt  EMplanner流程.md
src/my_algorithm/Planners/emplanner/include/emplanner/: DP_solver.h  DP_tamplate.h  emplanner.h  path_planner.h  planner_weights.h  speed_planner.h
src/my_algorithm/Planners/emplanner/src/: DP_solver.cpp  emplanner.cpp  path_planner.cpp  speed_planner.cpp
src/my_algorithm/Planners/emplanner/test/: main.cpp
src/my_algorithm/Planners/lattice/: CMakeLists.txt  README.md
src/my_algorithm/Planners/lattice/include/lattice/: lattice.h  lattice_collision_detection.h  lattice_planner.h  lattice_types.h  planner_weights.h  trajectory1d_generator.h  trajectory_combiner.h  trajectory_evaluator.h
src/my_algorithm/Planners/lattice/src/: lattice_collision_detection.cpp  lattice_planner.cpp  trajectory1d_generator.cpp  trajectory_combiner.cpp  trajectory_evaluator.cpp
src/my_algorithm/Planners/lattice/test/: constraint_collision_main.cpp  lattice_collision_detection_main.cpp  test_collision_edge.cpp  test_following_scenario.cpp  test_lattice_planner_main.cpp  test_trajectory_evaluator.cpp  trajectory1d_generator_main.cpp  trajectory_combiner_main.cpp  trajectory_evaluator_main.cpp
src/my_algorithm/controller/: CMakeLists.txt  package.xml
src/my_algorithm/controller/include/controller/: Vehicle_model.h  lateral_lqr_controller.h  lon_cascade_pid_controller.h  mpc_controller.h  pid_controller.h  pid_lqr_controller.h
src/my_algorithm/controller/src/: Vehicle_model.cpp  lateral_lqr_controller.cpp  lon_cascade_pid_controller.cpp  mpc_controller.cpp  pid_controller.cpp  pid_lqr_controller.cpp
src/my_algorithm/controller/test/: main.cpp
src/my_algorithm/general_modules/: CMakeLists.txt  package.xml
src/my_algorithm/general_modules/include/general_modules/: FrenetFrame.h  ReferenceLine.h  ST_graph.h  Trajectory.h  Vehicle.h  bezier.h  cilqr.h  cilqrbak.h  collision_detection.h  common_types.h  controller_base.h  csv_logger.h  geometry.h  logger.h  math_tool.h  planner_base.h  polynomial_curve.h  spline.h  tic_toc.h  visualization_tool.h
src/my_algorithm/general_modules/lut/: control_lut.json
src/my_algorithm/general_modules/src/: FrenetFrame.cpp  ReferenceLine.cpp  ST_graph.cpp  Trajectory.cpp  Vehicle.cpp  cilqr.cpp  cilqrbak.cpp  collision_detection.cpp  common_types.cpp  csv_logger.cpp  math_tool.cpp  polynomial_curve.cpp  visualization_tool.cpp
src/my_algorithm/general_modules/test/: collision_detect.cpp  main.cpp  obstacle_test.cpp
src/my_algorithm/planner/: CMakeLists.txt  DP模版使用说明.md  package.xml
src/my_algorithm/planner/include/planner/: DP_algorithm.hpp  DP_solver.h  DP_tamplate.h  emplanner.h  path_planner.h  planner_weights.h  speed_planner.h
src/my_algorithm/planner/src/: DP_solver.cpp  emplanner.cpp  path_planner.cpp  speed_planner.cpp
src/my_algorithm/planner/test/: main.cpp
src/my_algorithm/pnc_agent/: CMakeLists.txt  package.xml
src/my_algorithm/pnc_agent/include/pnc_agent/: control_agent.h  planning_agent.h
src/my_algorithm/pnc_agent/launch/: my_pnc_launch.py
src/my_algorithm/pnc_agent/src/: control_agent.cpp  planning_agent.cpp
src/my_algorithm/pnc_msgs/: CMakeLists.txt  package.xml
src/my_algorithm/run_all/: CMakeLists.txt  package.xml
src/my_algorithm/run_all/config/: carla_ad_demo_ros2.rviz
src/my_algorithm/run_all/launch/: launch_all.launch.py  start_simulation.launch.py
src/my_algorithm/run_all/scripts/: spawn_npc_tool.py  test_spawn_npc.py
src/my_algorithm/run_all/src/: goal_to_waypoints.cpp  vehicle_info_checker.cpp  vehicle_info_publisher.cpp
src/my_algorithm/scenario/: CMakeLists.txt  package.xml
src/my_algorithm/scenario/config/: CatalogExample.xosc  ChangingWeather.xosc  objects.json
src/my_algorithm/scenario/launch/: load_scenario.launch.py
src/my_algorithm/scenario/script/: road_width_pub.py
src/my_algorithm/script/: spawn_npc.py
src/ros2_bridge/rviz_carla_plugin/: CMakeLists.txt  package.xml
(+56 files in other folders)
