<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pnc_msgs</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="1763287396@qq.com">root</maintainer>
  <license>TODO: License declaration</license>

  <!-- 编译工具依赖 -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- 消息生成依赖（必须） -->
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>rosidl_typesupport_c</build_depend>
  <build_depend>rosidl_typesupport_cpp</build_depend>
  <build_depend>std_msgs</build_depend>  <!-- 若消息依赖 std_msgs -->
  
  <!-- 运行时依赖 -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>rosidl_typesupport_c</exec_depend>
  <exec_depend>rosidl_typesupport_cpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  
  <!-- 必须加入该组，否则消息生成失败 -->
  <member_of_group>rosidl_interface_packages</member_of_group>
  

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
