<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>run_all</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="1763287396@qq.com">root</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- CARLA ROS包依赖 -->
  <depend>carla_ros_bridge</depend>
  <depend>carla_spawn_objects</depend>
  <depend>carla_waypoint_publisher</depend>
  <depend>carla_manual_control</depend>
  <depend>carla_ros_scenario_runner</depend>
  <depend>scenario</depend>
  
  <!-- 算法包依赖 -->
  <depend>pnc_agent</depend>
  
  <!-- ROS核心依赖 -->
  <depend>rclcpp</depend>
  <depend>rviz2</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>carla_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
