<?xml version="1.0"?>
<package format="3">
  <name>mpc</name>
  <version>0.0.0</version>
  <description>MPC controller package</description>
  <maintainer email="1763287396@qq.com">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>Eigen3</depend>
  <depend>OsqpEigen</depend>
  <depend>general_modules</depend>
  <depend>pidlqr</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
